--- a/helloworld.css
+++ b/helloworld.css
@@ -10,7 +10,17 @@ body{
 	
 }
 img{
-	width: 350px;
-	height:100px;
-	border: 0
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 35%;
+    border:10px;
 	}
+p{
+	font-weight: 900;
+	font-size: 25px;
+}
+ul{
+	font-weight: 900;
+	font-size: 25px;
+}
